[package]
name = "torrent-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.18"
crossterm = "0.23"
transmission-rpc = "0.3.6"
tokio = { version = "1.20.1", features = ["full"] }
log = "0.4"
tui-logger = "0.8"
byte-unit = "4.0.14"
